# fdf

./: 1.txt  CMakeLists.txt  Debugging.c  Makefile  bresenham.c  fdf.h  fill_map.c  fun_general.c  fun_map_ptr.c  fun_pix.c  main.c
libft/: libft.h
minilibx/: mlx_int.h  mlx_xpm.c
